--- a/heros.html
+++ b/heros.html
@@ -94,26 +94,25 @@
         </div>
       </div>
     </nav>
-
-
-<!-- Menu Side-Bar -->
-<!-- <aside class="menu">
-  <p class="menu-label">General</p>
-  <ul class="menu-list">
-    <li><a class="is-active" href="#speeches"  style="font-size: 17px;">Speeches</a></li>
-    <ul>
-      <li><a href="#aHouseDivided">A House Divided</a></li>
-    </ul>
-    <li><a class="is-active" href="#historicalDocs" style="font-size: 17px;">Historical Documents</a></li>
-    <ul>
-      <li><a href="#decOfIndependance">Dec. of Independance</a></li>
-    </ul>
-  </ul>
-</aside> -->
+    
+<br><br>
+<div id="submitHeroInfo" class="box">
+  <p>If you would like to submit a hero of your own, please go to our 
+    <a href="contact.html" target="_blank">contact</a> page and select <strong style="color: rgb(189, 91, 91);">Recommend a "Hero of Humanity"</strong>
+  in the <strong style="color: rgb(189, 91, 91);">Subject</strong> drop-down menu. Make sure to give a brief description of the individual's accomplishments 
+  and why you believe they should be nominated. We will be happy to review your submissions.</p>
+  <style>
+    .box {
+      color: rgb(189, 91, 91);
+      margin-left: 5%;
+      margin-right: 5%;
+    }
+  </style>
+</div>
 
 
 <!-- Heros of Humanity -->
-<br><br>
+<br>
 
 <div class="title" id="titleHeaderBox" style="font-family: 'Times New Roman',  serif;  font-size: 70px; display: inline-block; color: white;">Heros of Humanity:</div>
 
@@ -311,7 +310,7 @@
       </div>
       <div class="media-content">
         <p class="title is-4"><a href="https://www.nelsonmandela.org/biography" target="_blank">Nelson Mandela</a></p>
-        <p class="subtitle is-6">1st president of South Africa</p>
+        <p class="subtitle is-6">1st President of South Africa</p>
         <p class="subtitle is-6">Born: July 18, 1918 <br>Died: December 5, 2013</p>
       </div>
     </div>
