--- a/home.html
+++ b/home.html
@@ -95,12 +95,10 @@
       </div>
     </nav>
 
-
-      <section class="section is-small" style="font-family: 'Times New Roman', serif !important; font-size: 20px; color: blue !important;">
-        <h2  id="quote" class="subtitle is-family-primary" style="font-family: 'Comic Sans MS', cursive !important; font-size: 30px;">
-            <strong>"Waste no more time arguing what a good man should be. Be one." <br>-- Marcus Aurelius</strong> 
-        </h2>
-      </section>
+    <!-- Image Quote -->
+      <div id="quoteImage">
+        <img src="images/quote.png" alt="">
+      </div>
 
 <!-- Intro Section -->
       <section class="section is-small">
